<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reset4.memorygame.MainActivity"
    android:orientation="horizontal"
    android:gravity="center"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/removeAdLayout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/remove_ads"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:background="@drawable/remove_ads_button_style"
            android:text="@string/remove_ads"
            android:textSize="@dimen/remove_ads_button_text_size"
            android:textColor="@android:color/white"
            android:onClick="removeAds"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="11"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/button_baby"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_game_button_style"
            android:text="@string/baby"
            android:textSize="@dimen/select_game_button_text_size"
            android:onClick="open2x4game"
            android:minWidth="250dp"/>

        <Button
            android:id="@+id/button_child"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/select_game_button_margin"
            android:text="@string/child"
            android:textSize="@dimen/select_game_button_text_size"
            android:background="@drawable/select_game_button_style"
            android:onClick="open3x4game"
            android:minWidth="250dp"/>

        <Button
            android:id="@+id/button_brother"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/select_game_button_margin"
            android:text="@string/brother"
            android:textSize="@dimen/select_game_button_text_size"
            android:background="@drawable/select_game_button_style"
            android:onClick="open4x4game"
            android:minWidth="250dp"/>

        <Button
            android:id="@+id/button_father"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/select_game_button_margin"
            android:text="@string/father"
            android:textSize="@dimen/select_game_button_text_size"
            android:background="@drawable/select_game_button_style"
            android:onClick="open4x5game"
            android:minWidth="250dp"/>

        <Button
            android:id="@+id/button_grandfather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/select_game_button_margin"
            android:text="@string/grandfather"
            android:textSize="@dimen/select_game_button_text_size"
            android:background="@drawable/select_game_button_style"
            android:onClick="open5x6game"
            android:minWidth="250dp"/>

    </LinearLayout>

</LinearLayout>
