<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.reset4.memorygame.ResultActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <ImageView
            android:id="@+id/iv_firstStar"
            android:src="@drawable/white_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_secondStar"
            android:src="@drawable/white_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_thirdStar"
            android:src="@drawable/white_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_forthStar"
            android:src="@drawable/white_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ImageView
            android:id="@+id/iv_fifthStar"
            android:src="@drawable/white_star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_pointsInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/point_text_size"
            android:textColor="@color/infotext_color"/>
        <TextView
            android:id="@+id/tv_pointsCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/point_padding"
            android:text="@string/points"
            android:textSize="@dimen/point_caption_text_size"
            android:textColor="@color/caption_color"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/result_info_padding_top"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_gameLevelCaption"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/level"
                android:textSize="@dimen/result_text_size"
                android:textColor="@color/caption_color"/>
            <TextView
                android:id="@+id/tv_gameLevelInfo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/result_info_padding"
                android:textSize="@dimen/result_text_size"
                android:textColor="@color/infotext_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_attemptCaption"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/attempt"
                android:textSize="@dimen/result_text_size"
                android:textColor="@color/caption_color"/>
            <TextView
                android:id="@+id/tv_attemptInfo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/result_info_padding"
                android:textSize="@dimen/result_text_size"
                android:textColor="@color/infotext_color"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_durationCaption"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/duration"
                android:textSize="@dimen/result_text_size"
                android:textColor="@color/caption_color"/>
            <TextView
                android:id="@+id/tv_durationInfo"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/result_info_padding"
                android:textSize="@dimen/result_text_size"
                android:textColor="@color/infotext_color"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/button_margin">
        <Button
            android:id="@+id/button_mainMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_game_button_style"
            android:text="@string/main_menu"
            android:textSize="@dimen/select_game_button_text_size"
            android:onClick="mainMenu"
            android:minWidth="220dp"/>
        <Button
            android:id="@+id/button_playAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/select_game_button_style"
            android:text="@string/play_again"
            android:textSize="@dimen/select_game_button_text_size"
            android:onClick="playAgain"
            android:minWidth="220dp"
            android:layout_marginLeft="@dimen/button_margin"/>
    </LinearLayout>
</LinearLayout>
