<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/game_activity_padding_top"
    tools:context="com.reset4.memorygame.GameActivity"
    android:orientation="vertical"
    android:background="@drawable/background">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textview_attempt_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/attempt"
                android:textSize="@dimen/running_game_caption_text_size"
                android:textColor="@color/caption_color"
                />
            <TextView
                android:id="@+id/textview_attempt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/running_game_caption_padding"
                android:text="0"
                android:textSize="@dimen/running_game_info_text_size"
                android:textColor="@color/infotext_color"
                />
            <TextView
                android:id="@+id/textview_turned_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/running_game_info_padding"
                android:text="@string/turned"
                android:textSize="@dimen/running_game_caption_text_size"
                android:textColor="@color/caption_color"
                />
            <TextView
                android:id="@+id/textview_turned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/running_game_caption_padding"
                android:text="0"
                android:textSize="@dimen/running_game_info_text_size"
                android:textColor="@color/infotext_color"
                />
            <TextView
                android:id="@+id/textview_duration_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/running_game_info_padding"
                android:text="@string/duration"
                android:textSize="@dimen/running_game_caption_text_size"
                android:textColor="@color/caption_color"
                />
            <TextView
                android:id="@+id/textview_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/running_game_caption_padding"
                android:text="00:00:00"
                android:textSize="@dimen/running_game_info_text_size"
                android:textColor="@color/infotext_color"
                />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/boardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        </LinearLayout>
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
